# betting-microservices

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
bet-maker/: .dockerignore  .env.bet_maker  .env.docker  .env.docker.example  Dockerfile  pyproject.toml  requirements.txt
bet-maker/app/: config.py  consumers.py  crud.py  database.py  main.py  models.py  rabbitmq.py  schemas.py
bet-maker/app/routers/: bets.py  events.py
bet-maker/migrations/: env.py
bet-maker/migrations/versions/: 71a29d2b4718_db_creation.py  88088d8facc7_new_columns.py
bet-maker/tests/: conftest.py  test_bets.py  test_events.py
line-provider/: .env.docker  .env.docker.example  .env.line_provider  Dockerfile  pyproject.toml  requirements.txt
line-provider/app/: config.py  consumers.py  crud.py  database.py  main.py  models.py  rabbitmq.py  router.py  schemas.py
line-provider/migrations/: env.py
line-provider/migrations/versions/: 4fce4bc20dc1_db_create.py
line-provider/tests/: conftest.py  test_events.py
