[tool.poetry]
name = "bet-maker"
version = "0.1.0"
description = "Making bets!"
authors = ["Maxim Anufriev <anufrieff.maxim@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.111.1"
uvicorn = "0.30.4"
sqlalchemy = "2.0.31"
asyncpg = "0.29.0"
psycopg2-binary = "2.9.9"
alembic = "1.13.2"
aio-pika = "9.4.2"
python-dotenv = "1.0.1"
pydantic = "2.8.2"
python-multipart = "0.0.9"
redis = "4.6.0"
hiredis = "3.0.0"
fastapi-cache2 = "0.2.2"

[tool.poetry.group.dev.dependencies]
black = "24.8.0"
isort = "5.13.2"
pytest = "^8.3"
pytest-asyncio = "^0.24"
httpx = "0.27.0"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
